Updated blog colour; attempted to fix flicker on nav bar on mobile

--- a/PlinxPlanner/static/css/style.css
+++ b/PlinxPlanner/static/css/style.css
@@ -20,6 +20,13 @@ a {
   a:hover {
     text-decoration: none; }
 
+header{
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  position: fixed;
+  z-index: 1000;
+}
+
 h1, h2, h3, h4, h5,
 .h1, .h2, .h3, .h4, .h5 {
   font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; }
